<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="100dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray_color">


        <TextView
            android:id="@+id/item_yellow_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:gravity="center"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/textSize18"
            app:layout_constraintEnd_toStartOf="@+id/item_home_team_yellow_cards"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toEndOf="@+id/item_away_team_yellow_cards"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/yellow_cards" />

        <TextView
            android:id="@+id/item_home_team_yellow_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:textColor="@color/primary_color"
            app:layout_constraintBottom_toTopOf="@+id/details_home_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.317"
            tools:text="8" />


        <TextView
            android:id="@+id/details_home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="@dimen/margin8"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@color/primary_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/item_away_team_yellow_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:textColor="@color/primary_color"
            app:layout_constraintBottom_toTopOf="@+id/details_away_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="5" />

        <TextView
            android:id="@+id/details_away_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="@dimen/margin8"
            android:gravity="center"
            android:text="@string/away"
            android:textColor="@color/primary_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
