<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardElevation="16dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color">

        <TextView
            android:id="@+id/details_referee_name"
            style="@style/matchLargeTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="12dp"

            android:layout_marginEnd="50dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.452"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="K-Friend" />

        <TextView
            android:id="@+id/details_match_date"
            style="@style/matchSmallTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/details_referee_name"
            app:layout_constraintHorizontal_bias="0.424"
            app:layout_constraintStart_toStartOf="@+id/details_referee_name"
            app:layout_constraintTop_toBottomOf="@+id/details_referee_name"
            tools:text="15/07/2014" />

        <ImageView
            android:id="@+id/details_away_team_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/southampton" />

        <TextView
            android:id="@+id/details_away_team_name"
            style="@style/matchLargeTextViews"
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/details_away_team_logo"
            app:layout_constraintStart_toStartOf="@+id/details_away_team_logo"
            app:layout_constraintTop_toBottomOf="@+id/details_away_team_logo"
            tools:text="Wolvs" />

        <TextView
            android:id="@+id/details_away_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/away"
            app:layout_constraintEnd_toEndOf="@+id/details_away_team_name"
            app:layout_constraintStart_toStartOf="@+id/details_away_team_name"
            app:layout_constraintTop_toBottomOf="@+id/details_away_team_name" />

        <ImageView
            android:id="@+id/details_home_team_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/liverpool" />

        <TextView
            android:id="@+id/details_home_team_name"
            style="@style/matchLargeTextViews"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/details_home_team_logo"
            app:layout_constraintStart_toStartOf="@+id/details_home_team_logo"
            app:layout_constraintTop_toBottomOf="@+id/details_home_team_logo"
            tools:text="liverpool" />

        <TextView
            android:id="@+id/details_home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            app:layout_constraintEnd_toEndOf="@+id/details_home_team_name"
            app:layout_constraintStart_toStartOf="@+id/details_home_team_name"
            app:layout_constraintTop_toBottomOf="@+id/details_home_team_name" />

        <TextView
            android:id="@+id/details_away_full_time_goals"
            style="@style/matchLargeTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/details_separator"
            app:layout_constraintStart_toStartOf="@+id/details_match_date"
            tools:text="2" />

        <TextView
            android:id="@+id/details_separator"
            style="@style/matchLargeTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/colon"
            app:layout_constraintEnd_toStartOf="@+id/details_home_full_time_goals"
            app:layout_constraintStart_toEndOf="@+id/details_away_full_time_goals"
            app:layout_constraintTop_toBottomOf="@+id/details_match_date" />


        <TextView
            android:id="@+id/details_home_full_time_goals"
            style="@style/matchLargeTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/details_separator"
            app:layout_constraintEnd_toEndOf="@+id/details_match_date"
            tools:text="4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
